@@ -1,3 +1,7 @@
+1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* defobj.h: Fix //# doc strings (following colon required).
+
 1998-05-26  Alex Lancaster  <alex@santafe.edu>
 
 	* defobj.h (raiseEvent,M(), initModule, globalZone, scratchZone,
